# procmod

./: .gitignore  .gitmodules  .lintr  404.html  CMakeLists.txt  LICENSE  README.org  back_var.txt  collocation.py  docs.org  email_word2vec.ipynb  email_word2vec.py  email_word2vec_preproc.r  index.html  index.json  index.xml  item_home.html  item_home.md  main.cpp  piacc.org  piacc_word2vec.ipynb  piacc_word2vec.py  run.sh  sitemap.xml  word2vec.R  word2vec.py  word2vec_fun.py  word2vec_preproc.r
R/: Renviron.R  all_in_one.R  analysis.R  background.R  collocation.R  gender_wilcoxon.R  init.R  itemcode.R  jyun-plot-profiles.R  load-outputs.R  lpa-res.R  lpa.R  lpa_back.R  lpa_fig.R  lpa_res.R  pinfo_preproc.R  pmean.R  preproc-data.R  retrain_pimp_rf.R  run-analysis.R  run_all_in_one.R  run_lpa_compare.R  summary.R  train_pimp_rf.R  train_ranger.R  tune_ranger.R  visual.R
book_order/: bi_ss_class_1.tsv  bi_ss_class_2.tsv  bi_ss_class_3.tsv  bi_ss_class_4.tsv  lpa_mods.txt  mod3_bi_ss_class_1.tsv  mod3_bi_ss_class_2.tsv  mod3_bi_ss_class_3.tsv  mod3_tri_ss_class_1.tsv  mod3_tri_ss_class_2.tsv  mod3_tri_ss_class_3.tsv  param_mean.csv  quad_ss_class_1.tsv  quad_ss_class_2.tsv  quad_ss_class_3.tsv  quad_ss_class_4.tsv  start.csv  summary.csv  tau_imp.txt  theta_imp.txt  tri_ss_class_1.tsv  tri_ss_class_2.tsv  tri_ss_class_3.tsv  tri_ss_class_4.tsv  wilcoxon.txt
categories/: index.html  index.xml
cd_tally/: bi_ss_class_1.tsv  bi_ss_class_2.tsv  bi_ss_class_3.tsv  bi_ss_class_4.tsv  lpa_mods.txt  mod3_bi_ss_class_1.tsv  mod3_bi_ss_class_2.tsv  mod3_bi_ss_class_3.tsv  mod3_tri_ss_class_1.tsv  mod3_tri_ss_class_2.tsv  mod3_tri_ss_class_3.tsv  param_mean.csv  quad_ss_class_1.tsv  quad_ss_class_2.tsv  quad_ss_class_3.tsv  quad_ss_class_4.tsv  run.sh  start.csv  summary.csv  tau_imp.txt  theta_imp.txt  tri_ss_class_1.tsv  tri_ss_class_2.tsv  tri_ss_class_3.tsv  tri_ss_class_4.tsv  wilcoxon.txt
club_membership-1/: bi_ss_class_1.tsv  bi_ss_class_2.tsv  bi_ss_class_3.tsv  lpa_mods.txt  param_mean.csv  quad_ss_class_1.tsv  quad_ss_class_2.tsv  quad_ss_class_3.tsv  start.csv  summary.csv  tau_imp.txt  theta_imp.txt  tri_ss_class_1.tsv  tri_ss_class_2.tsv  tri_ss_class_3.tsv  wilcoxon.txt
diprom/: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE
docs/: Makefile  config.toml  deploy.sh  item_home.html
draft/: index.html  index.xml
include/: ars.hpp  create_rng.hpp  fun_lp.h  fun_updates.h  is_empty.h  log_surv.h  logdensity.h  par_fun_lp.h  readCSV.h  txt2vec.h  update_beta.h  update_kappa.h  update_tau.h  update_theta.h
item_codebook/: index.html
lamp_return/: bi_ss_class_1.tsv  start.csv  (+17 more)
(+413 files in other folders)
